# Silent-Rails

./: .gitignore  ARCHITECTURE.md  Anchor.toml  Cargo.toml  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
BlueprintV2.0/: Technical_Execution_Manual.md
BlueprinthV1.O/: Manifesto.md
North_Portocol/: 03_CORE_UPGRADES.md
North_Portocol/sentinel/: 01_Blueprint_V1.md  Cargo.toml
North_Portocol/sentinel/02_BlueprintV2.0/: Technical_Execution_Manual.md
North_Portocol/sentinel/BlueprintV2.0/: Technical_Execution_Manual.md
North_Portocol/sentinel/src/: lib.rs
North_Protocol/circuits/: sentinel.circom
benches/: performance_bench.rs
circuits/: sentinel_commitment.circom  sentinel_transfer.circom  sentinel_withdraw.circom
programs/sentinel/: Cargo.toml
programs/sentinel/examples/: client_connection.rs
programs/sentinel/src/: lib.rs
tests/: sentinel.ts
