[package]
name = "sentinel"
version = "0.1.0"
description = "Sentinel Privacy Rail - Institutional Grade Privacy Infrastructure"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sentinel"

[features]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"