[package]
name = "sentinel"
version = "1.0.0"
description = "Sentinel Privacy Rail - Institutional Grade Privacy Infrastructure v1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sentinel"

[features]
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }