[package]
name = "sentinel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sentinel"

[features]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "1.18.0"
solana-zk-token-sdk = "1.18.0"
subtle = "=2.4.1"
getrandom = { version = "0.2", features = ["js"] }